--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,15 @@
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Awesomeness on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
+        
+        {% comment %}
+        =======================
+        The purpose of this snippet is to list all the tags you have in your site.
+        =======================
+        {% endcomment %}
+        {% for tag in tags %}
+	      <a href="#{{ tag | slugify }}"> {{ tag }} </a>
+        {% endfor %}
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
