--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,9 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        {% if site.github.is_project_page %}
+        <!--{% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Awesomeness on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
+        {% endif %}-->
         
         {% comment %}
         =======================
